update case: statu scancel  to opp and opp detail